force-app/main/default/objects/Client_Surveys__c/Client_Surveys__c.object-meta.xml
<CustomObject>
    <description>Contains all survey records</description>
    <label>Client Survey</label>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>Survey Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>