force-app/main/default/objects/Client_Surveys__c/fields/Additional_Comments_on_Re_cert_Process__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments_on_Re_cert_Process__c</fullName>
    <description>Any additional comments, feedback, suggestions on how Atlas can improve the re-certification process for our clients?</description>
    <inlineHelpText>Any additional comments, feedback, suggestions on how Atlas can improve the re-certification process for our clients?</inlineHelpText>
    <label>Additional Comments on Re-cert Process</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>