force-app/main/default/objects/Client_Surveys__c/fields/Additional_Comments_or_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments_or_Feedback__c</fullName>
    <description>Any additional comments, feedback, suggestions on how Atlas can improve their client care?</description>
    <inlineHelpText>Any additional comments, feedback, suggestions on how Atlas can improve their client care?</inlineHelpText>
    <label>Additional Comments or Feedback</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>