force-app/main/default/objects/Client_Surveys__c/fields/Anything_Else__c.field-meta.xml
<CustomField>
    <fullName>Anything_Else__c</fullName>
    <description>Anything else you would like Atlas to know?</description>
    <inlineHelpText>Anything else you would like Atlas to know?</inlineHelpText>
    <label>Anything Else</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>