force-app/main/default/objects/Client_Surveys__c/fields/Anything_Else_You_d_Like_Us_To_Know__c.field-meta.xml
<CustomField>
    <fullName>Anything_Else_You_d_Like_Us_To_Know__c</fullName>
    <description>Is there anything you would like us to know about your trainer or training sessions?</description>
    <inlineHelpText>Is there anything you would like us to know about your trainer or training sessions?</inlineHelpText>
    <label>Anything Else You&apos;d Like Us To Know</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>