force-app/main/default/objects/Client_Surveys__c/fields/Anything_Else_You_Would_Like_Us_To_Know__c.field-meta.xml
<CustomField>
    <fullName>Anything_Else_You_Would_Like_Us_To_Know__c</fullName>
    <description>Anything else you would like Atlas to know about your past year?</description>
    <inlineHelpText>Anything else you would like Atlas to know about your past year?</inlineHelpText>
    <label>Anything Else You Would Like Us To Know</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>