force-app/main/default/objects/Client_Surveys__c/fields/Anything_You_Would_Like_Us_To_Know__c.field-meta.xml
<CustomField>
    <fullName>Anything_You_Would_Like_Us_To_Know__c</fullName>
    <description>Is there anything you would like us to know about your Atlas Team Facilitator?</description>
    <inlineHelpText>Is there anything you would like us to know about your Atlas Team Facilitator?</inlineHelpText>
    <label>Anything You Would Like Us To Know</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>