force-app/main/default/objects/Client_Surveys__c/fields/Atlas_Certified_Trainer__c.field-meta.xml
<CustomField>
    <fullName>Atlas_Certified_Trainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the client used an Atlas Certified Trainer, this will look up to that individuals&apos; record</description>
    <label>Atlas Certified Trainer</label>
    <referenceTo>Trainer__c</referenceTo>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>