force-app/main/default/objects/Client_Surveys__c/fields/Changing_The_Application_Process__c.field-meta.xml
<CustomField>
    <fullName>Changing_The_Application_Process__c</fullName>
    <description>Is there anything you would change about the application process?</description>
    <inlineHelpText>Is there anything you would change about the application process?</inlineHelpText>
    <label>Changing The Application Process</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>