force-app/main/default/objects/Client_Surveys__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The client associated with this survey</description>
    <label>Client</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Client__c.Stage__c</field>
            <operation>equals</operation>
            <value>On-going</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Client__c</referenceTo>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>