force-app/main/default/objects/Client_Surveys__c/fields/Could_Atlas_Have_Done_Anything_Different__c.field-meta.xml
<CustomField>
    <fullName>Could_Atlas_Have_Done_Anything_Different__c</fullName>
    <description>Could Atlas have done anything different to support you more effectively? Explain.</description>
    <inlineHelpText>Could Atlas have done anything different to support you more effectively? Explain.</inlineHelpText>
    <label>Could Atlas Have Done Anything Different</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>