force-app/main/default/objects/Client_Surveys__c/fields/Date_of_Survey__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Survey__c</fullName>
    <description>The date the survey was taken</description>
    <label>Date of Survey</label>
    <type>Date</type>
</CustomField>