force-app/main/default/objects/Client_Surveys__c/fields/Describe_a_Typical_Session__c.field-meta.xml
<CustomField>
    <fullName>Describe_a_Typical_Session__c</fullName>
    <description>Please describe a typical training session.</description>
    <inlineHelpText>Please describe a typical training session.</inlineHelpText>
    <label>Describe a Typical Session</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>