force-app/main/default/objects/Client_Surveys__c/fields/Did_Atlas_Communicate_With_You__c.field-meta.xml
<CustomField>
    <fullName>Did_Atlas_Communicate_With_You__c</fullName>
    <description>Did Atlas communicate with you in a clear and timely manner to prepare you for yourrecertification? Explain.</description>
    <inlineHelpText>Did Atlas communicate with you in a clear and timely manner to prepare you for yourrecertification? Explain.</inlineHelpText>
    <label>Did Atlas Communicate With You</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>