force-app/main/default/objects/Client_Surveys__c/fields/Did_You_Feel_Needs_Were_Met_PAT__c.field-meta.xml
<CustomField>
    <fullName>Did_You_Feel_Needs_Were_Met_PAT__c</fullName>
    <description>Did you feel that your needs were met throughout the PAT in terms of any accommodations you might haveneeded?</description>
    <inlineHelpText>Did you feel that your needs were met throughout the PAT in terms of any accommodations you might haveneeded?</inlineHelpText>
    <label>Did You Feel Needs Were Met - PAT</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>