force-app/main/default/objects/Client_Surveys__c/fields/Did_You_Feel_Prepared_For_PAT__c.field-meta.xml
<CustomField>
    <fullName>Did_You_Feel_Prepared_For_PAT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did you feel prepared for your PAT?</description>
    <inlineHelpText>Did you feel prepared for your PAT?</inlineHelpText>
    <label>Did You Feel Prepared For PAT?</label>
    <type>Checkbox</type>
</CustomField>