force-app/main/default/objects/Client_Surveys__c/fields/Did_You_Feel_Sufficiently_Supported__c.field-meta.xml
<CustomField>
    <fullName>Did_You_Feel_Sufficiently_Supported__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did you feel sufficiently supported by Atlas and all representing us?</description>
    <inlineHelpText>Did you feel sufficiently supported by Atlas and all representing us?</inlineHelpText>
    <label>Did You Feel Sufficiently Supported</label>
    <type>Checkbox</type>
</CustomField>