force-app/main/default/objects/Client_Surveys__c/fields/Did_You_Feel_Supported_By_Atlas__c.field-meta.xml
<CustomField>
    <fullName>Did_You_Feel_Supported_By_Atlas__c</fullName>
    <description>Did you feel sufficiently supported by Atlas and all representing us?</description>
    <inlineHelpText>Did you feel sufficiently supported by Atlas and all representing us?</inlineHelpText>
    <label>Did You Feel Supported By Atlas</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>