force-app/main/default/objects/Client_Surveys__c/fields/Did_You_Feel_Supported_Throughout__c.field-meta.xml
<CustomField>
    <fullName>Did_You_Feel_Supported_Throughout__c</fullName>
    <description>Did you feel supported throughout the application process? (Questions answered, concerns addressed,adequate communication with Atlas staff etc.)</description>
    <inlineHelpText>Did you feel supported throughout the application process? (Questions answered, concerns addressed,adequate communication with Atlas staff etc.)</inlineHelpText>
    <label>Did You Feel Supported Throughout</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>