force-app/main/default/objects/Client_Surveys__c/fields/Did_You_Find_Your_TF_Work_Beneficial__c.field-meta.xml
<CustomField>
    <fullName>Did_You_Find_Your_TF_Work_Beneficial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did you find your work with your team facilitator beneficial in helping you become a confident service doghandler?</description>
    <inlineHelpText>Did you find your work with your team facilitator beneficial in helping you become a confident service doghandler?</inlineHelpText>
    <label>Did You Find Your TF Work Beneficial</label>
    <type>Checkbox</type>
</CustomField>