force-app/main/default/objects/Client_Surveys__c/fields/Did_You_Have_Any_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Did_You_Have_Any_Concerns__c</fullName>
    <description>Did you have any concerns leading up to your recertification? If so, were they properly addressed?</description>
    <inlineHelpText>Did you have any concerns leading up to your recertification? If so, were they properly addressed?</inlineHelpText>
    <label>Did You Have Any Concerns</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>