force-app/main/default/objects/Client_Surveys__c/fields/Did_You_Leave_The_App_Process_Understand__c.field-meta.xml
<CustomField>
    <fullName>Did_You_Leave_The_App_Process_Understand__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did you leave the application process understanding what was next?</description>
    <inlineHelpText>Did you leave the application process understanding what was next?</inlineHelpText>
    <label>Did You Leave The App Process Understand</label>
    <type>Checkbox</type>
</CustomField>