force-app/main/default/objects/Client_Surveys__c/fields/Did_You_Leave_The_Application_Process__c.field-meta.xml
<CustomField>
    <fullName>Did_You_Leave_The_Application_Process__c</fullName>
    <description>Did you leave the application process understanding what was next?</description>
    <inlineHelpText>Did you leave the application process understanding what was next?</inlineHelpText>
    <label>Did You Leave The Application Process</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>