force-app/main/default/objects/Client_Surveys__c/fields/Did_Your_Facilitator_Provide_Support__c.field-meta.xml
<CustomField>
    <fullName>Did_Your_Facilitator_Provide_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did your facilitator provide the support you wanted/needed?</description>
    <inlineHelpText>Did your facilitator provide the support you wanted/needed?</inlineHelpText>
    <label>Did Your Facilitator Provide Support</label>
    <type>Checkbox</type>
</CustomField>