force-app/main/default/objects/Client_Surveys__c/fields/Did_Your_Facilitator_Provide_The_Support__c.field-meta.xml
<CustomField>
    <fullName>Did_Your_Facilitator_Provide_The_Support__c</fullName>
    <description>Did your facilitator provide the support you wanted/needed?</description>
    <inlineHelpText>Did your facilitator provide the support you wanted/needed?</inlineHelpText>
    <label>Did Your Facilitator Provide The Support</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>