force-app/main/default/objects/Client_Surveys__c/fields/Do_You_Feel_Confident_As_Handler__c.field-meta.xml
<CustomField>
    <fullName>Do_You_Feel_Confident_As_Handler__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do you feel confident and prepared as a service dog handler?Yes No If not, what areas do you still need support in?</description>
    <inlineHelpText>Do you feel confident and prepared as a service dog handler?Yes No If not, what areas do you still need support in?</inlineHelpText>
    <label>Do You Feel Confident As Handler</label>
    <type>Checkbox</type>
</CustomField>