force-app/main/default/objects/Client_Surveys__c/fields/Do_You_Feel_Prepared_as_a_Service_Handle__c.field-meta.xml
<CustomField>
    <fullName>Do_You_Feel_Prepared_as_a_Service_Handle__c</fullName>
    <description>Do you feel confident and prepared as a service dog handler?Yes No If not, what areas do you still need support in?</description>
    <inlineHelpText>Do you feel confident and prepared as a service dog handler?Yes No If not, what areas do you still need support in?</inlineHelpText>
    <label>Do You Feel Prepared as a Service Handle</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>