force-app/main/default/objects/Client_Surveys__c/fields/Do_You_Think_You_Were_Treated_Fair__c.field-meta.xml
<CustomField>
    <fullName>Do_You_Think_You_Were_Treated_Fair__c</fullName>
    <description>Do you think you were treated in a fair, ethical, and non-discriminatory fashion throughout the application, training, and PAT?</description>
    <inlineHelpText>Do you think you were treated in a fair, ethical, and non-discriminatory fashion throughout the application, training, and PAT?</inlineHelpText>
    <label>Do You Think You Were Treated Fair</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>