force-app/main/default/objects/Client_Surveys__c/fields/Does_Trainer_and_TF_Communicate_Well__c.field-meta.xml
<CustomField>
    <fullName>Does_Trainer_and_TF_Communicate_Well__c</fullName>
    <description>Do your trainer and team facilitator communicate with each other? How do you all work as a team?</description>
    <inlineHelpText>Do your trainer and team facilitator communicate with each other? How do you all work as a team?</inlineHelpText>
    <label>Does Trainer and TF Communicate Well?</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>