force-app/main/default/objects/Client_Surveys__c/fields/Does_Trainer_Give_You_Support_How__c.field-meta.xml
<CustomField>
    <fullName>Does_Trainer_Give_You_Support_How__c</fullName>
    <description>Does your trainer give you the support you need?</description>
    <inlineHelpText>Does your trainer give you the support you need?</inlineHelpText>
    <label>Does Trainer Give You Support - How?</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>