force-app/main/default/objects/Client_Surveys__c/fields/Does_Your_Trainer_Give_You_Support__c.field-meta.xml
<CustomField>
    <fullName>Does_Your_Trainer_Give_You_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does your trainer give you the support you need?</description>
    <inlineHelpText>Does your trainer give you the support you need?</inlineHelpText>
    <label>Does Your Trainer Give You Support</label>
    <type>Checkbox</type>
</CustomField>