force-app/main/default/objects/Client_Surveys__c/fields/Feel_Free_to_Add_Comments__c.field-meta.xml
<CustomField>
    <fullName>Feel_Free_to_Add_Comments__c</fullName>
    <description>Please feel free to add any comments regarding any aspect of your experience with Atlas Assistance Dogs.</description>
    <inlineHelpText>Please feel free to add any comments regarding any aspect of your experience with Atlas Assistance Dogs.</inlineHelpText>
    <label>Feel Free to Add Comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>