force-app/main/default/objects/Client_Surveys__c/fields/Handler_Name__c.field-meta.xml
<CustomField>
    <fullName>Handler_Name__c</fullName>
    <description>If applicable, the name of the handler</description>
    <label>Handler Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>