force-app/main/default/objects/Client_Surveys__c/fields/Has_Atlas_Given_You_Support__c.field-meta.xml
<CustomField>
    <fullName>Has_Atlas_Given_You_Support__c</fullName>
    <description>Have you felt that Atlas has given you adequate support? Explain.</description>
    <inlineHelpText>Have you felt that Atlas has given you adequate support? Explain.</inlineHelpText>
    <label>Has Atlas Given You Support</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>