force-app/main/default/objects/Client_Surveys__c/fields/Have_You_Had_Any_Difficulties__c.field-meta.xml
<CustomField>
    <fullName>Have_You_Had_Any_Difficulties__c</fullName>
    <description>Have you had any difficulties as a service dog team in the past year? Explain.</description>
    <inlineHelpText>Have you had any difficulties as a service dog team in the past year? Explain.</inlineHelpText>
    <label>Have You Had Any Difficulties</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>