force-app/main/default/objects/Client_Surveys__c/fields/How_Did_You_Feel_About_The_App_Interview__c.field-meta.xml
<CustomField>
    <fullName>How_Did_You_Feel_About_The_App_Interview__c</fullName>
    <description>How did you feel about the application interview?</description>
    <inlineHelpText>How did you feel about the application interview?</inlineHelpText>
    <label>How Did You Feel About The App Interview</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>