force-app/main/default/objects/Client_Surveys__c/fields/How_Has_Having_A_Service_Dog_Affected__c.field-meta.xml
<CustomField>
    <fullName>How_Has_Having_A_Service_Dog_Affected__c</fullName>
    <description>How has having a service dog affected your day-to-day life?</description>
    <inlineHelpText>How has having a service dog affected your day-to-day life?</inlineHelpText>
    <label>How Has Having A Service Dog Affected</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>