force-app/main/default/objects/Client_Surveys__c/fields/How_Has_Your_Year_Gone_Overall__c.field-meta.xml
<CustomField>
    <fullName>How_Has_Your_Year_Gone_Overall__c</fullName>
    <description>How has your year as a service dog team gone overall?</description>
    <inlineHelpText>How has your year as a service dog team gone overall?</inlineHelpText>
    <label>How Has Your Year Gone Overall</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>