force-app/main/default/objects/Client_Surveys__c/fields/How_Have_You_And_Your_Service_Dog__c.field-meta.xml
<CustomField>
    <fullName>How_Have_You_And_Your_Service_Dog__c</fullName>
    <description>How have you and your service dog been successful as a working team?</description>
    <inlineHelpText>How have you and your service dog been successful as a working team?</inlineHelpText>
    <label>How Have You And Your Service Dog</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>