force-app/main/default/objects/Client_Surveys__c/fields/How_Have_You_Been_Functioning_Overall__c.field-meta.xml
<CustomField>
    <fullName>How_Have_You_Been_Functioning_Overall__c</fullName>
    <description>How have you been functioning overall as a service dog handler?</description>
    <inlineHelpText>How have you been functioning overall as a service dog handler?</inlineHelpText>
    <label>How Have You Been Functioning Overall</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>