force-app/main/default/objects/Client_Surveys__c/fields/How_Is_Your_Dog_s_Health__c.field-meta.xml
<CustomField>
    <fullName>How_Is_Your_Dog_s_Health__c</fullName>
    <description>How is your dog’s health?</description>
    <inlineHelpText>How is your dog’s health?</inlineHelpText>
    <label>How Is Your Dog&apos;s Health</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>