force-app/main/default/objects/Client_Surveys__c/fields/How_Knowledgeable_Is_Trainer__c.field-meta.xml
<CustomField>
    <fullName>How_Knowledgeable_Is_Trainer__c</fullName>
    <description>How knowledgeable do you feel your trainer is in terms of your disability/medical needs?</description>
    <inlineHelpText>How knowledgeable do you feel your trainer is in terms of your disability/medical needs?</inlineHelpText>
    <label>How Knowledgeable Is Trainer</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>