force-app/main/default/objects/Client_Surveys__c/fields/How_Was_Having_a_Service_Dog__c.field-meta.xml
<CustomField>
    <fullName>How_Was_Having_a_Service_Dog__c</fullName>
    <description>How has having a service dog improved your quality of life?</description>
    <inlineHelpText>How has having a service dog improved your quality of life?</inlineHelpText>
    <label>How Was Having a Service Dog</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>