force-app/main/default/objects/Client_Surveys__c/fields/How_Was_The_Ed_Material_Provided__c.field-meta.xml
<CustomField>
    <fullName>How_Was_The_Ed_Material_Provided__c</fullName>
    <description>How was the Educational material provided by Atlas? Was the platform easy to use? Was the content helpful?What would you want to be different?</description>
    <inlineHelpText>How was the Educational material provided by Atlas? Was the platform easy to use? Was the content helpful?What would you want to be different?</inlineHelpText>
    <label>How Was The Ed Material Provided</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>