force-app/main/default/objects/Client_Surveys__c/fields/How_Was_Your_Overall_Experience__c.field-meta.xml
<CustomField>
    <fullName>How_Was_Your_Overall_Experience__c</fullName>
    <description>How was your overall experience with the recertification process, including the PAT?</description>
    <inlineHelpText>How was your overall experience with the recertification process, including the PAT?</inlineHelpText>
    <label>How Was Your Overall Experience</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>