force-app/main/default/objects/Client_Surveys__c/fields/How_Well_Did_Trainer_Communicate_w_you__c.field-meta.xml
<CustomField>
    <fullName>How_Well_Did_Trainer_Communicate_w_you__c</fullName>
    <description>How well did your trainer communicate with you, including listening well, during and outside of sessionstraining sessions?</description>
    <inlineHelpText>How well did your trainer communicate with you, including listening well, during and outside of sessionstraining sessions?</inlineHelpText>
    <label>How Well Did Trainer Communicate w/you</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>