force-app/main/default/objects/Client_Surveys__c/fields/How_Well_Did_Your_TF_Communicate__c.field-meta.xml
<CustomField>
    <fullName>How_Well_Did_Your_TF_Communicate__c</fullName>
    <description>How well did your team facilitator communicate with you, including listening well and responding during and outside of sessions training sessions?</description>
    <inlineHelpText>How well did your team facilitator communicate with you, including listening well and responding during and outside of sessions training sessions?</inlineHelpText>
    <label>How Well Did Your TF Communicate</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>