force-app/main/default/objects/Client_Surveys__c/fields/In_Person_Team_Assessment__c.field-meta.xml
<CustomField>
    <fullName>In_Person_Team_Assessment__c</fullName>
    <description>How did you feel about the in-person team assessment?</description>
    <inlineHelpText>How did you feel about the in-person team assessment?</inlineHelpText>
    <label>In-Person Team Assessment</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>