force-app/main/default/objects/Client_Surveys__c/fields/Initial_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Initial_Client_Name__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp; Id, &quot;Initial Client&quot; &amp;&quot; &quot;&amp;  Client__r.Name &amp;&quot; &quot;&amp;  TEXT(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Client Name</label>
    <type>Text</type>
</CustomField>