force-app/main/default/objects/Client_Surveys__c/fields/Is_There_Anything_You_Would_Change__c.field-meta.xml
<CustomField>
    <fullName>Is_There_Anything_You_Would_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is there anything you would change about the application process?</description>
    <inlineHelpText>Is there anything you would change about the application process?</inlineHelpText>
    <label>Is There Anything You Would Change</label>
    <type>Checkbox</type>
</CustomField>