force-app/main/default/objects/Client_Surveys__c/fields/Prepared_For_PAT_Comments__c.field-meta.xml
<CustomField>
    <fullName>Prepared_For_PAT_Comments__c</fullName>
    <description>Did you feel prepared for your PAT?</description>
    <inlineHelpText>Did you feel prepared for your PAT?</inlineHelpText>
    <label>Prepared For PAT, Comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>