force-app/main/default/objects/Client_Surveys__c/fields/Rate_Overall_Experience_with_TF__c.field-meta.xml
<CustomField>
    <fullName>Rate_Overall_Experience_with_TF__c</fullName>
    <description>How would you rate your overall experience with your team facilitator?</description>
    <inlineHelpText>How would you rate your overall experience with your team facilitator?</inlineHelpText>
    <label>Rate Overall Experience with TF</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>