force-app/main/default/objects/Client_Surveys__c/fields/Rate_the_Application_Process__c.field-meta.xml
<CustomField>
    <fullName>Rate_the_Application_Process__c</fullName>
    <description>How would you rate the application process? 1-10 10 being the best</description>
    <inlineHelpText>How would you rate the application process? 1-10 10 being the best</inlineHelpText>
    <label>Rate the Application Process</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>