force-app/main/default/objects/Client_Surveys__c/fields/Rate_The_Atlas_Client_Cert_Program__c.field-meta.xml
<CustomField>
    <fullName>Rate_The_Atlas_Client_Cert_Program__c</fullName>
    <description>How would you rate the Atlas Client Certification Program?</description>
    <inlineHelpText>How would you rate the Atlas Client Certification Program?</inlineHelpText>
    <label>Rate The Atlas Client Cert Program</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>