force-app/main/default/objects/Client_Surveys__c/fields/Rate_Your_Public_Acess_Test__c.field-meta.xml
<CustomField>
    <fullName>Rate_Your_Public_Acess_Test__c</fullName>
    <description>How would you rate your Public Access Test experience?</description>
    <inlineHelpText>How would you rate your Public Access Test experience?</inlineHelpText>
    <label>Rate Your Public Acess Test</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>