force-app/main/default/objects/Client_Surveys__c/fields/Team_Facilitator__c.field-meta.xml
<CustomField>
    <fullName>Team_Facilitator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The TF associated with this survey record</description>
    <label>Team Facilitator</label>
    <referenceTo>Team_Facilitator__c</referenceTo>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>