force-app/main/default/objects/Client_Surveys__c/fields/The_Approach_and_Information__c.field-meta.xml
<CustomField>
    <fullName>The_Approach_and_Information__c</fullName>
    <description>Was the approach and information provided by your facilitator consistent with Atlas’ client courses, our program description, and our stated ethics and goals?</description>
    <inlineHelpText>Was the approach and information provided by your facilitator consistent with Atlas’ client courses, our program description, and our stated ethics and goals?</inlineHelpText>
    <label>The Approach and Information</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>