force-app/main/default/objects/Client_Surveys__c/fields/Was_Our_Message_Consistent__c.field-meta.xml
<CustomField>
    <fullName>Was_Our_Message_Consistent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was our message consistent?</description>
    <inlineHelpText>Was our message consistent?</inlineHelpText>
    <label>Was Our Message Consistent</label>
    <type>Checkbox</type>
</CustomField>