force-app/main/default/objects/Client_Surveys__c/fields/Was_PAT_Sufficient_for_Final_Test__c.field-meta.xml
<CustomField>
    <fullName>Was_PAT_Sufficient_for_Final_Test__c</fullName>
    <description>Do you feel the PAT was a sufficient final graduation test? Is there something we should add? Something weshould remove?</description>
    <inlineHelpText>Do you feel the PAT was a sufficient final graduation test? Is there something we should add? Something weshould remove?</inlineHelpText>
    <label>Was PAT Sufficient for Final Test</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>