force-app/main/default/objects/Client_Surveys__c/fields/Was_Process_Clear__c.field-meta.xml
<CustomField>
    <fullName>Was_Process_Clear__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was the process clear and did you understand how you were doing?</description>
    <inlineHelpText>Was the process clear and did you understand how you were doing?</inlineHelpText>
    <label>Was Process Clear</label>
    <type>Checkbox</type>
</CustomField>