force-app/main/default/objects/Client_Surveys__c/fields/Was_The_Approach_and_Information__c.field-meta.xml
<CustomField>
    <fullName>Was_The_Approach_and_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was the approach and information provided by your facilitator consistent with Atlas’ client courses, ourprogram description, and our stated ethics and goals?</description>
    <inlineHelpText>Was the approach and information provided by your facilitator consistent with Atlas’ client courses, ourprogram description, and our stated ethics and goals?</inlineHelpText>
    <label>Was The Approach and Information</label>
    <type>Checkbox</type>
</CustomField>