force-app/main/default/objects/Client_Surveys__c/fields/Was_The_Message_Consistent__c.field-meta.xml
<CustomField>
    <fullName>Was_The_Message_Consistent__c</fullName>
    <description>Was our message consistent?</description>
    <inlineHelpText>Was our message consistent?</inlineHelpText>
    <label>Was The Message Consistent?</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>