force-app/main/default/objects/Client_Surveys__c/fields/Was_The_Process_Clear__c.field-meta.xml
<CustomField>
    <fullName>Was_The_Process_Clear__c</fullName>
    <description>Was the process clear and did you understand how you were doing?</description>
    <inlineHelpText>Was the process clear and did you understand how you were doing?</inlineHelpText>
    <label>Was The Process Clear</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>