force-app/main/default/objects/Client_Surveys__c/fields/Was_Work_W_TF_Beneficial__c.field-meta.xml
<CustomField>
    <fullName>Was_Work_W_TF_Beneficial__c</fullName>
    <description>Did you find your work with your team facilitator beneficial in helping you become a confident service doghandler?</description>
    <inlineHelpText>Did you find your work with your team facilitator beneficial in helping you become a confident service doghandler?</inlineHelpText>
    <label>Was Work W/TF Beneficial</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>